waybar/dot-config/waybar/style.css
@define-color highlight #685878;
@define-color base1 #1e1e2e;
@define-color yellow #f9e2af;

window#waybar {
  all: unset;
}
@keyframes blink-warning {
  70% {
    color: white;
  }

  to {
    color: white;
    background-color: orange;
  }
}

@keyframes blink-critical {
  70% {
    color: white;
  }

  to {
    color: white;
    background-color: red;
  }
}

/* -----------------------------------------------------------------------------
 * Base styles
 * -------------------------------------------------------------------------- */

/* Reset all styles */
* {
  border: none;
  border-radius: 0;
  min-height: 0;
  margin: 1px;
  padding: 0;
}

.modules-left {
  border-radius: 10px;
  background-color: @base1;
  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
}
.modules-center {
  background-color: @base1;
  border-radius: 10px;
  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
  padding: 3px; /* Adds 10px padding on left and right */
}
.modules-right {
  border-radius: 10px;
  padding-left: 30px;
  background-color: @base1;
  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
}
/* The whole bar */
#waybar {
  background: transparent;
  color: #e3e3ea;
  background-color: @base1;
  font-family: JetBrainsMonoMedium Nerd Font;
  font-size: 15px;
  min-height: 0;
}

/* Every modules */
#mode,
#network,
#bluetooth,
#custom-keyboard-layout,
#custom-music,
#idle_inhibitor,
#cpu,
#memory,
#backlight,
#pulseaudio,
#battery,
#clock,
#tray {
  padding: 0.5rem 0.6rem;
  margin: 1px 0px;
  font-weight: bold;
  font-size: 16px;
}

/* -----------------------------------------------------------------------------
 * Module styles
 * -------------------------------------------------------------------------- */

#custom-launcher {
  margin-left: 15px;
  margin-right: 10px;
}

#workspaces {
  font-size: 14px;
}

#workspaces button {
  border-radius: 5px;
  color: #eceff4;
  padding: 6px;
  margin-right: 2px;
  margin-left: 2px;
}
#workspaces button.active {
  border: 3px solid #d8dee9;
  font-weight: bold;
}

#workspaces button.special {
  /* border: 4px solid yellow; */
  background: #685878;
  /* color: #c9545d; */
  /* border-color: #c9545d; */
}

#workspaces button.urgent {
  border: 3px solid #c9545d;
  color: #c9545d;
}

#submap {
  background: orange;
  border-bottom: 3px transparent;
  color: black;
  margin-left: 5px;
  padding: 10px; /* Adds 10px padding on left and right */
  font-weight: bold;
}

#window {
  padding-right: 30px;
  font-weight: bold;
}

#network.disconnected {
  color: orange;
}

#cpu.warning {
  color: orange;
}

#cpu.critical {
  color: red;
}

#memory {
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

#memory.warning {
  color: orange;
}

#memory.critical {
  color: red;
  animation-name: blink-critical;
  animation-duration: 2s;
  padding-left: 5px;
  padding-right: 5px;
}

#backlight.icon {
}

#pulseaudio {
}

#battery {
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

#battery.warning {
  color: orange;
}

#battery.critical {
  color: red;
}

#battery.warning.discharging {
  animation-name: blink-warning;
  animation-duration: 3s;
}

#battery.critical.discharging {
  animation-name: blink-critical;
  animation-duration: 2s;
}

#custom-power {
  margin-left: 10px;
  margin-right: 20px;
  font-size: 25px;
  font-weight: bold;
}

